--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comp229-F2020-midterm-301110966",
+  "name": "comp229-f2020-midterm",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -22,7 +22,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "save": "^2.4.0"
   },
   "engines": {
     "node": "^10.15.0",
