Trying a different approuch to fix the problem

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "comp308-w2017-midterm",
+  "name": "COMP229-F2020-MidTerm-301110966",
   "description": "## Welcome to the MidTerm Project - the Favourite Book List App",
   "main": "server.js",
   "authors": [
