--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "express-session": "^1.17.1",
     "font-awesome": "^4.7.0",
     "http-errors": "~1.6.2",
